src/objects/Document_Request_List__c.object
<CustomObject>
    <description>This is the document request list.  It will be a union of all documents required regardless of state, for each opportunity the list will be filtered for the appropriate documents.</description>
    <fields>
        <fullName>CF_Private_Notes__c</fullName>
        <inlineHelpText>These are not shared with the Property Owner.  These are intended for CF use only.</inlineHelpText>
        <label>CF Private Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRL_Template_ItemID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Describes the master:detail relationship DRL_Template_ItemID</description>
        <inlineHelpText>Describes the master:detail relationship DRL_Template_ItemID.</inlineHelpText>
        <label>DRL Template ItemID</label>
        <referenceTo>DRL_Template_Item__c</referenceTo>
        <relationshipLabel>Document Request Lists</relationshipLabel>
        <relationshipName>Document_Request_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Name_Global__c</fullName>
        <description>Document_Name_Global</description>
        <inlineHelpText>Document_Name_Global</inlineHelpText>
        <label>Document Name Global</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <inlineHelpText>Status of the document.</inlineHelpText>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>When the document is due by</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_and_Comments__c</fullName>
        <inlineHelpText>These will be included in reports that are going to the property owner.  It should be used to clarify the document request.</inlineHelpText>
        <label>Notes and Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <inlineHelpText>This is the document request list for an opportunity.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Document Request Lists</relationshipLabel>
        <relationshipName>Opportunity_DRL</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <inlineHelpText>When the document was received.</inlineHelpText>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsible_Party__c</fullName>
        <inlineHelpText>Who is responsible for providing the document.</inlineHelpText>
        <label>Responsible Party</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CleanFund</fullName>
                </value>
                <value>
                    <fullName>Property Owner</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Tax Equity Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>When does this document go out?</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stage 1 (Term Sheet)</fullName>
                </value>
                <value>
                    <fullName>Stage 2 (Letter of Intent)</fullName>
                </value>
                <value>
                    <fullName>Stage 3 (Due Diligence)</fullName>
                </value>
                <value>
                    <fullName>Stage 4 (Underwriting)</fullName>
                </value>
                <value>
                    <fullName>Stage 5 (Closing)</fullName>
                </value>
                <value>
                    <fullName>Post Closing</fullName>
                    <isActive>false</isActive>
                    <label>Post Closing</label>
                </value>
                <value>
                    <fullName>Prior to Application</fullName>
                    <isActive>false</isActive>
                    <label>Prior to Application</label>
                </value>
                <value>
                    <fullName>Prior to Commitment</fullName>
                    <isActive>false</isActive>
                    <label>Prior to Commitment</label>
                </value>
                <value>
                    <fullName>Prior to Docs Out</fullName>
                    <isActive>false</isActive>
                    <label>Prior to Docs Out</label>
                </value>
                <value>
                    <fullName>Prior to Funding</fullName>
                    <isActive>false</isActive>
                    <label>Prior to Funding</label>
                </value>
                <value>
                    <fullName>Prior to LOI</fullName>
                    <isActive>false</isActive>
                    <label>Prior to LOI</label>
                </value>
                <value>
                    <fullName>Prior to Lender Ack.</fullName>
                    <isActive>false</isActive>
                    <label>Prior to Lender Ack.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>What is the status of this document</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Post Closing</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User who verified document met CF requirements.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_Request_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <inlineHelpText>When the document was verified by a CF Employee</inlineHelpText>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <label>Document Request List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_DRLs</fullName>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Notes_and_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All DRLs</label>
    </listViews>
    <nameField>
        <label>Document Request List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Request List</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>